# otus_arch_hw1

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yaml
calculator/: quadratic_equation.py
tests/: test_solve_quadratic_equation.py
